--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
@@ -26,6 +28,8 @@
     "ndb": "^1.1.5",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.18",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "stripe": "^10.10.0",
+    "uuid": "^9.0.0"
   }
 }
